--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,30 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>MyAngularApiRequests</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-</head>
-<body>
-  <app-root></app-root>
-</body>
+  <head>
+    <meta charset="utf-8" />
+    <meta
+      property="og:title"
+      content="My Angular Calculator and Converter Lab"
+    />
+    <meta
+      property="og:description"
+      content="Ett litet miniprojekt byggt i Angular."
+    />
+    <meta
+      property="og:image"
+      content="https://my-first-angular-site.netlify.app/images/sara.jpg"
+    />
+    <meta
+      property="og:url"
+      content="https://my-first-angular-site.netlify.app"
+    />
+    <meta property="og:type" content="website" />
+    <title>My Angular API Requests</title>
+    <base href="/" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+  </head>
+  <body>
+    <app-root></app-root>
+  </body>
 </html>
