Added translated course names via local json file

--- a/src/index.html
+++ b/src/index.html
@@ -2,24 +2,18 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta
-      property="og:title"
-      content="My Angular Calculator and Converter Lab"
-    />
-    <meta
-      property="og:description"
-      content="Ett litet miniprojekt byggt i Angular."
-    />
+    <meta property="og:title" content="My Angular API Requests Lab" />
+    <meta property="og:description" content="A small Angular project" />
     <meta
       property="og:image"
-      content="https://my-first-angular-site.netlify.app/images/sara.jpg"
+      content="https://my-angular-api-requests-lab.netlify.app/images/sara.jpg"
     />
     <meta
       property="og:url"
-      content="https://my-first-angular-site.netlify.app"
+      content="https://my-angular-api-requests-lab.netlify.app"
     />
     <meta property="og:type" content="website" />
-    <title>My Angular API Requests</title>
+    <title>Home | My Angular API Requests Lab</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
